--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-chat",
   "version": "0.1.0",
+  "homepage": "https://github.com/Klorestz/2022-2-VK-EDU-FS-Frontend-D-Karasev",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
